--- a/JustJava/app/src/main/res/layout/activity_main.xml
+++ b/JustJava/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.android.justjava.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:scrollbars="vertical">
+
+    <EditText
+        android:id="@+id/editTextName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Name"
+        android:inputType="textMultiLine" />
+
+    <TextView
+        android:id="@+id/toppingTextView"
+        android:layout_margin="16dp"
+        android:textColor="@android:color/black"
+        style="@style/HeaderTextStyle"
+        android:text="TOPPING" />
+
+    <CheckBox
+        android:id="@+id/checkboxMilk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:textSize="16sp"
+        android:paddingLeft="24dp"
+        android:text="Whipped cream"
+        android:textAppearance="?android:textAppearanceMedium" />
+
+    <CheckBox
+        android:id="@+id/checkboxChoco"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:textSize="16sp"
+        android:paddingLeft="24dp"
+        android:text="Chocolate"
+        android:textAppearance="?android:textAppearanceMedium" />
 
     <TextView
         android:id="@+id/title_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
         android:layout_margin="16dp"
         android:textColor="@android:color/black"
-        android:textSize="16sp"
+        style="@style/HeaderTextStyle"
         android:text="QUANTITY" />
 
     <LinearLayout
@@ -74,4 +111,10 @@
         android:layout_height="wrap_content"
         android:text="ORDER" />
 
+
+
+
+
+
 </LinearLayout>
+</ScrollView>
